ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /identity(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: A-svc
                port:
                  number: 80
          - path: /identity(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: B-svc
                port:
                  number: 80
